--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="notifications">Notifications</string>
     <string name="account">Account</string>
     <string name="settings">Settings</string>
+    <string name="privacy_policy">Privacy Policy</string>
 
     <!-- Expandable Menu Test Area -->
     <string-array name="dept_array">
@@ -22,6 +23,18 @@
         <item>Books</item>
         <item>Language</item>
     </string-array>
+
+    <!-- Account settings activity strings -->
+    <string name="title_activity_account_settings">Account</string>
+
+    <!-- App settings activity strings -->
+    <string name="title_activity_app_settings">Settings</string>
+
+    <!-- Privacy policy activity strings -->
+    <string name="title_activity_notifications">Notifications</string>
+
+    <!-- Privacy policy activity strings -->
+    <string name="title_activity_privacy_policy">Privacy Policy</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
