--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">MarcoPoloApp</string>
+    <string name="app_name">Marco Polo App</string>
     <string name="title_activity_maps">Map</string>
-    <string name="title_activity_login">Sign in</string>
 
     <string name="open">Open</string>
     <string name="close">Close</string>
@@ -55,4 +54,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">SplashActivity</string>
+
+    <string name="signed_in_fmt">Signed in as: %s</string>
+    <string name="signed_out">Signed out</string>
+
 </resources>
