Updating LoginActivity as Main Activity & fixed bug with Google Login.

--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="signed_in_fmt">Signed in as: %s</string>
     <string name="signed_out">Signed out</string>
 
+    <string name="logo">Marco Polo Logo</string>
+
 </resources>
