--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -8,6 +8,22 @@
     <string name="marco">Marco</string>
     <string name="recentMarcos">Your Recent Marcos</string>
 
+    <!-- Test friends list -->
+    <string-array name="friends_list">
+        <item>David</item>
+        <item>Chase</item>
+        <item>Daphnie</item>
+        <item>Joseph</item>
+        <item>Aleck</item>
+        <item>Andrew</item>
+        <item>Dummy1</item>
+        <item>Dummy2</item>
+        <item>Dummy3</item>
+        <item>Dummy4</item>
+        <item>Dummy5</item>
+        <item>Dummy6</item>
+    </string-array>
+
     <!-- Menu Strings -->
     <string name="notifications">Notifications</string>
     <string name="account">Account</string>
