--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="close">Close</string>
     <string name="marco">Marco</string>
     <string name="recentMarcos">Your Recent Marcos</string>
-
-    <!-- Test friends list -->
+    <!--
+     Test friends list
     <string-array name="friends_list">
         <item>David</item>
         <item>Chase</item>
@@ -23,7 +23,7 @@
         <item>Dummy5</item>
         <item>Dummy6</item>
     </string-array>
-
+-->
     <!-- Menu Strings -->
     <string name="notifications">Notifications</string>
     <string name="account">Account</string>
@@ -86,4 +86,19 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">SplashActivity</string>
+
+    <string name="new_message_notification_title_template">New message: %1$s</string>
+
+    <!-- TODO: remove this placeholder text -->
+    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
+        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
+        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
+        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
+        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
+        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
+        tortor.
+    </string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
 </resources>
