--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Marco Polo App</string>
+    <string name="app_name">MarcoPoloApp</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_login">Sign in</string>
 
     <string name="open">Open</string>
     <string name="close">Close</string>
@@ -9,6 +10,7 @@
 
     <!-- Menu Strings -->
     <string name="notifications">Notifications</string>
+    <string name="friends">Friends</string>
     <string name="account">Account</string>
     <string name="settings">Settings</string>
     <string name="privacy_policy">Privacy Policy</string>
@@ -25,6 +27,9 @@
 
     <!-- Account settings activity strings -->
     <string name="title_activity_account_settings">Account</string>
+
+    <!-- Friends list activity strings -->
+    <string name="title_activity_friends">Friends</string>
 
     <!-- App settings activity strings -->
     <string name="title_activity_app_settings">Settings</string>
