--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -68,6 +68,13 @@
     <string name="account_email">Linked Google Email:</string>
 
     <string name="current_user"></string>
+    <string name="send">Send</string>
+    <string name="cancel">Cancel</string>
+    <string name="marco_title">Send a Marco</string>
+    <string name="marco_switch_public">Public</string>
+    <string name="marco_switch_private">Private</string>
+    <string name="marco_message_hint">What would you like to say?</string>
+    <string name="marco_friends_list">Choose the friends to Marco:</string>
 
     <!--Web Application Client ID for authenticating with Google-->
     <string name="server_client_id">736384937236-g8i7jp2e64icddv79grql1haosjkbhd0.apps.googleusercontent.com</string>
