--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -77,4 +77,9 @@
     <string name="empty_friends_list">Your friends list is empty.\nTry sending a public marco!</string>
     <string name="empty_message">You have to enter a message!</string>
 
+    <!-- Syncing phone contacts to friends list -->
+    <string name="sync_prompt">Syncing your contacts to your account will add any existing users\nwho
+        currently have an account here to your friends list.\n
+        Do you want to sync your phone contacts to your friends list?</string>
+
 </resources>
