--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="server_client_id">736384937236-g8i7jp2e64icddv79grql1haosjkbhd0.apps.googleusercontent.com</string>
 
     <!--Error Handling-->
+    <string name="has_active_polo">You currently have an active polo, please cancel it before marcoing!</string>
     <string name="duplicate_marco">You already have a Marco!\nCreating a new Marco will overwrite the current one.</string>
     <string name="empty_friends_list">Your friends list is empty.\nTry sending a public marco!</string>
     <string name="empty_message">You have to enter a message!</string>
