New background for notifications window. Updated UI with an active notification icon and layout properties.

--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="FacebookProfile">Facebook Profile Attached</string>
     <string name="GoogleProfile">Google Profile Attached</string>
     <string name="Logout">Logout</string>
+    <string name="notification_window_icon">Notification Window Icon</string>
 </resources>
