fixing gradle properties

--- a/MarcoPoloApp/app/src/main/res/values/strings.xml
+++ b/MarcoPoloApp/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="delete">Delete</string>
     <string name="marco_title">Send a Marco</string>
     <string name="quick_marco_title">Polo a Public Marco</string>
-    <string name="polo_title">Send a Polo</string>
+    <string name="polo_title">Polo back!</string>
     <string name="message_blank">empty message</string>
     <string name="nulled_object">This polo has nulled out; ignore it</string>
     <string name="marco_switch_public">Public</string>
@@ -158,7 +158,7 @@
 
     <string name="sync_function">You have the option to sync contacts from your phone through your My Account page.  We will find any emails \nin
     your contact list that currently have accounts with us.</string>
-    <string name="sender">Sender:</string>
-    <string name="message">Message:</string>
+    <string name="sender">From:</string>
+    <string name="message">Marco:</string>
 
 </resources>
